update 04.11.2025